fixes issue 38130: support JDK 11